Update design of chapter cloud security

--- a/references.bib
+++ b/references.bib
@@ -475,3 +475,14 @@
   year      = {1969},
   publisher = {CAHNERS-DENVER PUBLISHING CO 2000 CLEARWATER DR, OAK BROOK, IL 60523-8809}
 }
+
+@inproceedings{mcgrew2006,
+  author    = {McGrew, R.},
+  booktitle = {Proceedings of the 39th Annual Hawaii International Conference on System Sciences (HICSS'06)},
+  title     = {Experiences with Honeypot Systems: Development, Deployment, and Analysis},
+  year      = {2006},
+  volume    = {9},
+  number    = {},
+  pages     = {220a-220a},
+  doi       = {10.1109/HICSS.2006.172}
+}
