Add cites of tpot

--- a/references.bib
+++ b/references.bib
@@ -486,3 +486,181 @@
   pages     = {220a-220a},
   doi       = {10.1109/HICSS.2006.172}
 }
+
+##################################################################################################################
+# T-Pot honeypots
+##################################################################################################################
+
+@misc{adbhoney2021,
+  author       = {Gabriel Cirlig},
+  title        = {ADBHoney},
+  howpublished = {\url{https://github.com/huuck/ADBHoney}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{cymmetria2018,
+  author       = {Cymmetria Research},
+  title        = {Cisco ASA honeypot},
+  howpublished = {\url{https://github.com/Cymmetria/ciscoasa_honeypot}},
+  year         = {2018},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{citrixhoneypot2020,
+  author       = {Marcus Hutchins},
+  title        = {Honepot for CVE-2019-19781 (Citrix ADC)},
+  howpublished = {\url{https://github.com/MalwareTech/CitrixHoneypot}},
+  year         = {2020},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{conpot2021,
+  author       = {Lukas Rist and Johnny Vestergaard and Daniel Haslinger and Andrea Pasquale and John Smith},
+  organization = {MushMush},
+  title        = {CONPOT ICS SCADA Honeypot},
+  howpublished = {\url{http://conpot.org/}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{cowire2021,
+  author       = {Cowire},
+  title        = {Cowrie SSH/Telnet Honeypot },
+  howpublished = {\url{https://github.com/cowrie/cowrie}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{ddosspot2021,
+  author       = {},
+  title        = {DDoSPot},
+  howpublished = {\url{https://github.com/aelth/ddospot}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{dicompot2021,
+  author       = {Mikael Keri},
+  title        = {Dicompot - A Digital Imaging and Communications in Medicine (DICOM) Honeypot},
+  howpublished = {\url{https://github.com/nsmfoo/dicompot}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{dionaea2021,
+  author       = {},
+  title        = {dionaea - catches bugs},
+  howpublished = {\url{https://github.com/DinoTools/dionaea}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{elasticpot2021,
+  author       = {Vesselin Bontchev},
+  title        = {ElasticPot: an Elasticsearch Honeypot},
+  howpublished = {\url{https://gitlab.com/bontchev/elasticpot}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{ipphoney2021,
+  author       = {Vesselin Bontchev},
+  title        = {IPPHoney: an Internet Printing Protocol Honeypot},
+  howpublished = {\url{https://gitlab.com/bontchev/ipphoney}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+
+@misc{endlessh2021,
+  author       = {Christopher Wellons},
+  title        = {Endlessh: an SSH tarpit},
+  howpublished = {\url{https://github.com/skeeto/endlessh}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{glutton2021,
+  author       = {Lukas Rist and Johnny Vestergaard and Daniel Haslinger and Andrea Pasquale and John Smith},
+  organization = {MushMush},
+  title        = {Glutton: low interaction honeypot},
+  howpublished = {\url{https://github.com/mushorg/glutton}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{tanner2021,
+  author       = {Lukas Rist and Johnny Vestergaard and Daniel Haslinger and Andrea Pasquale and John Smith},
+  organization = {MushMush},
+  title        = {Tanner: He who flays the hide},
+  howpublished = {\url{https://github.com/mushorg/tanner}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{snare2021,
+  author       = {Lukas Rist and Johnny Vestergaard and Daniel Haslinger and Andrea Pasquale and John Smith},
+  organization = {MushMush},
+  title        = {SNARE: Super Next generation Advanced Reactive honEypot},
+  howpublished = {\url{https://github.com/mushorg/snare}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{heralding2021,
+  author       = {Johnny Vestergaard},
+  title        = {Heralding: Credentials catching honeypot},
+  howpublished = {\url{https://github.com/johnnykv/heralding}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{hellpot2021,
+  author       = {Yung Innanet},
+  title        = {HellPot},
+  howpublished = {\url{https://github.com/yunginnanet/HellPot}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{honeypy2021,
+  author       = {Phillip Maddux},
+  title        = {HoneyPy},
+  howpublished = {\url{https://github.com/foospidy/HoneyPy}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{honeysap2021,
+  author       = {Martin Gallo},
+  organization = {SecureAuth Corporation},
+  title        = {HoneySAP: SAP Low-interaction honeypot},
+  howpublished = {\url{https://github.com/SecureAuthCorp/HoneySAP}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{honeytrap2021,
+  author       = {Tillmann Werner},
+  title        = {Honeytrap},
+  howpublished = {\url{https://github.com/armedpot/honeytrap/}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{medpot2021,
+  author       = {Markus Schmall},
+  title        = {Medpot: HL7 / FHIR honeypot },
+  howpublished = {\url{https://github.com/schmalle/medpot}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{rdpy2021,
+  author       = {Sylvain Peyrefitte},
+  title        = {RDPY: Remote Desktop Protocol in twisted python},
+  howpublished = {\url{https://github.com/citronneur/rdpy}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
