--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,8 @@
 \usepackage[inline]{enumitem}
 % top and bottom rule for tables
 \usepackage{booktabs}
+% sideways figure
+\usepackage{rotating}
 
 \usepackage[numbers]{natbib}
 
