--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,7 @@
+##################################################################################################################
+# Master Thesis Citations
+##################################################################################################################
+
 @conference{Provos2003,
   author    = {Niels Provos},
   title     = {Honeyd - A Virtual Honeypot Daemon},
@@ -286,9 +290,18 @@
 }
 
 @misc{heicloud2021,
-  author       = {Rechenzentrum der Universität Heidelberg},
-  title        = {heiCLOUD - Die Heidelberger Cloud-Infrastruktur},
+  key       = {University Computing Center Heidelberg},
+  title        = {heiCLOUD - The Heidelberg University cloud infrastructure},
   howpublished = {\url{https://heicloud.uni-heidelberg.de/heiCLOUD}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-02}
+}
+
+@misc{urz2021,
+  key          = {University Computing Center Heidelberg},
+  organization = {University Computing Center Heidelberg},
+  title        = {HeiCLOUD},
+  howpublished = {\url{https://www.urz.uni-heidelberg.de/en/service-catalogue/cloud/heicloud}},
   year         = {2021},
   note         = {Accessed: 2021-09-02}
 }
@@ -488,7 +501,7 @@
 }
 
 ##################################################################################################################
-# T-Pot honeypots
+# START T-Pot honeypots
 ##################################################################################################################
 
 @misc{adbhoney2021,
@@ -664,3 +677,7 @@
   year         = {2021},
   note         = {Accessed: 2021-09-26}
 }
+
+##################################################################################################################
+# END
+##################################################################################################################
