--- a/acronyms.tex
+++ b/acronyms.tex
@@ -14,3 +14,6 @@
 \DeclareAcronym{eu}{short=EU, long=European Union}
 \DeclareAcronym{vm}{short=VM, long=virtual machine}
 \DeclareAcronym{vmm}{short=VMM, long=virtual machine monitors}
+\DeclareAcronym{adb}{short=ADB, long=Android Debug Bridge}
+\DeclareAcronym{asa}{short=ASA, long=Adaptive Security Appliance}
+\DeclareAcronym{dos}{short=DoS, long=Denial of Service}
