--- a/acronyms.tex
+++ b/acronyms.tex
@@ -17,3 +17,6 @@
 \DeclareAcronym{adb}{short=ADB, long=Android Debug Bridge}
 \DeclareAcronym{asa}{short=ASA, long=Adaptive Security Appliance}
 \DeclareAcronym{dos}{short=DoS, long=Denial of Service}
+\DeclareAcronym{adc}{short=ADC, long=Application Delivery Controller}
+\DeclareAcronym{ics}{short=ICS, long=Industrial control systems}
+\DeclareAcronym{scada}{short=SCADA, long=Supervisory Control and Data Acquisition}
