--- a/acronyms.tex
+++ b/acronyms.tex
@@ -20,3 +20,9 @@
 \DeclareAcronym{adc}{short=ADC, long=Application Delivery Controller}
 \DeclareAcronym{ics}{short=ICS, long=Industrial control systems}
 \DeclareAcronym{scada}{short=SCADA, long=Supervisory Control and Data Acquisition}
+\DeclareAcronym{ddos}{short=DDoS, long=Distributed Denial of Service}
+\DeclareAcronym{ntp}{short=NTP, long=}
+\DeclareAcronym{ssdp}{short=SSDP, long=}
+\DeclareAcronym{chargen}{short=CHARGEN, long=}
+\DeclareAcronym{udp}{short=UDP, long=}
+\DeclareAcronym{dicom}{short=DICOM, long=Digital Imaging and Communications in Medicine}
