--- a/references.bib
+++ b/references.bib
@@ -2,6 +2,10 @@
 # Master Thesis Citations
 ##################################################################################################################
 
+##################################################################################################################
+# CONFERENCE, TECHREPORT
+##################################################################################################################
+
 @conference{Provos2003,
   author    = {Niels Provos},
   title     = {Honeyd - A Virtual Honeypot Daemon},
@@ -9,41 +13,6 @@
   address   = {Washington, D.C.},
   publisher = {{USENIX} Association},
   month     = aug
-}
-
-@article{Kelly2021,
-  doi       = {10.3390/s21072433},
-  url       = {https://doi.org/10.3390/s21072433},
-  year      = {2021},
-  month     = apr,
-  publisher = {{MDPI} {AG}},
-  volume    = {21},
-  number    = {7},
-  pages     = {2433},
-  author    = {Christopher Kelly and Nikolaos Pitropakis and Alexios Mylonas and Sean McKeown and William J. Buchanan},
-  title     = {A Comparative Analysis of Honeypots on Different Cloud Platforms},
-  journal   = {Sensors}
-}
-
-@inproceedings{Kuwatly2004,
-  author    = {Kuwatly, I. and Sraj, M. and Al Masri, Z. and Artail, H.},
-  booktitle = {The IEEE/ACS International Conference onPervasive Services, 2004. ICPS 2004. Proceedings.},
-  title     = {A dynamic honeypot design for intrusion detection},
-  year      = {2004},
-  volume    = {},
-  number    = {},
-  pages     = {95-104},
-  doi       = {10.1109/PERSER.2004.1356776}
-}
-
-@book{Spitzner2003,
-  author    = {Spitzner, Lance},
-  year      = {2003},
-  title     = {Honeypots - Tracking Hackers},
-  edition   = {},
-  isbn      = {978-0-321-10895-1},
-  publisher = {Addison-Wesley},
-  address   = {Amsterdam}
 }
 
 @conference{Diebold2005,
@@ -54,91 +23,240 @@
   month     = {Feburary}
 }
 
-@inproceedings{Mahajan2017,
-  author    = {Mahajan, Varan and Peddoju, Sateesh K},
-  booktitle = {2017 International Conference on Computing, Communication and Automation (ICCCA)},
-  title     = {Integration of network intrusion detection systems and honeypot networks for cloud security},
-  year      = {2017},
-  volume    = {},
-  number    = {},
-  pages     = {829-834},
-  doi       = {10.1109/CCAA.2017.8229911}
+@techreport{Mell2011,
+  doi         = {10.6028/nist.sp.800-145},
+  url         = {https://doi.org/10.6028/nist.sp.800-145},
+  year        = {2011},
+  publisher   = {National Institute of Standards and Technology},
+  institution = {National Institute of Standards and Technology},
+  author      = {P M Mell and T Grance},
+  title       = {The {NIST} definition of cloud computing}
 }
 
-@book{Wendzel2021,
-  doi       = {10.1007/978-3-658-33423-9},
-  url       = {https://doi.org/10.1007/978-3-658-33423-9},
-  year      = {2021},
-  publisher = {Springer Fachmedien Wiesbaden},
-  author    = {Steffen Wendzel},
-  title     = {{IT}-Sicherheit f\"{u}r {TCP}/{IP}- und {IoT}-Netzwerke}
+##################################################################################################################
+# MISC
+##################################################################################################################
+
+@misc{regalado2020,
+  title     = {Who Coined 'Cloud Computing'?},
+  url       = {https://www.technologyreview.com/2011/10/31/257406/who-coined-cloud-computing/},
+  journal   = {MIT Technology Review},
+  publisher = {MIT Technology Review},
+  author    = {Regalado, Antonio},
+  year      = {2020},
+  month     = {Feb}
 }
 
-@article{Jiang2006,
-  doi       = {10.1016/j.jpdc.2006.04.012},
-  url       = {https://doi.org/10.1016/j.jpdc.2006.04.012},
-  year      = {2006},
-  month     = sep,
-  publisher = {Elsevier {BV}},
-  volume    = {66},
-  number    = {9},
-  pages     = {1165--1180},
-  author    = {Xuxian Jiang and Dongyan Xu and Yi-Min Wang},
-  title     = {Collapsar: A {VM}-based honeyfarm and reverse honeyfarm architecture for network attack capture and detention},
-  journal   = {Journal of Parallel and Distributed Computing}
+@misc{heicloud2021,
+  key          = {University Computing Center Heidelberg},
+  title        = {heiCLOUD - The Heidelberg University cloud infrastructure},
+  howpublished = {\url{https://heicloud.uni-heidelberg.de/heiCLOUD}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-02}
 }
 
-@article{NawrockiWSKS2016,
-  author        = {Marcin Nawrocki and Matthias W{\"{a}}hlisch and Thomas C. Schmidt and Christian Keil and Jochen Sch{\"{o}}nfelder},
-  title         = {A Survey on Honeypot Software and Data Analysis},
-  journal       = {CoRR},
-  volume        = {abs/1608.06249},
-  year          = {2016},
-  url           = {http://arxiv.org/abs/1608.06249},
+@misc{urz2021,
+  key          = {University Computing Center Heidelberg},
+  organization = {University Computing Center Heidelberg},
+  title        = {HeiCLOUD},
+  howpublished = {\url{https://www.urz.uni-heidelberg.de/en/service-catalogue/cloud/heicloud}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-02}
+}
+
+@misc{statista2021,
+  author       = {Statista},
+  title        = {Year-over-year change in average monthly in-home data usage by device in the United States from January to March 2020},
+  howpublished = {\url{https://www.statista.com/statistics/1106821/covid-19-change-in-in-home-data-usage-in-us-2020/}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-04}
+}
+
+@misc{ibm2021,
+  author       = {},
+  title        = {IBM Cloud Hybrid. Open. Resilient. Your platform and partner for digital transformation.},
+  howpublished = {\url{https://www.ibm.com/cloud}},
+  year         = {}
+}
+
+@misc{aws2021,
+  author       = {},
+  title        = {},
+  howpublished = {},
+  year         = {}
+}
+
+@misc{google2021,
+  author       = {},
+  title        = {},
+  howpublished = {},
+  year         = {}
+}
+
+@misc{europol2021,
+  author       = {Europol},
+  title        = {About Europol},
+  howpublished = {\url{https://www.europol.europa.eu/about-europol}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-04}
+}
+
+@misc{gonzalez2003,
+  author       = {Alberto Gonzalez, Jack Whitsitt},
+  title        = {The Bait and Switch Honeypot: An active and aggressive part of your network security infrastructure.},
+  howpublished = {\url{http://baitnswitch.sourceforge.net/}},
+  year         = {2002},
+  note         = {Accessed: 2021-09-06}
+}
+
+@misc{cert2021,
+  author       = {Federal Office for Information Security},
+  title        = {CERT-Bund},
+  howpublished = {\url{https://www.bsi.bund.de/EN/Topics/IT-Crisis-Management/CERT-Bund/cert-bund_node.html}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-12}
+}
+
+@misc{docker2021,
+  author       = {Docker},
+  title        = {Docker Overview},
+  howpublished = {\url{https://docs.docker.com/get-started/overview/}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-21}
+}
+
+@misc{flanders2019,
+  title         = {A Simple and Intuitive Algorithm for Preventing Directory Traversal Attacks},
+  author        = {Michael Flanders},
+  year          = {2019},
+  eprint        = {1908.04502},
   archiveprefix = {arXiv},
-  eprint        = {1608.06249},
-  timestamp     = {Mon, 13 Aug 2018 16:47:59 +0200},
-  biburl        = {https://dblp.org/rec/journals/corr/NawrockiWSKS16.bib},
-  bibsource     = {dblp computer science bibliography, https://dblp.org}
+  primaryclass  = {cs.CR}
 }
 
-@inproceedings{Song2011,
-  author    = {Song, Jungsuk and Takakura, Hiroki and Okabe, Yasuo and Eto, Masashi and Inoue, Daisuke and Nakao, Koji},
-  title     = {Statistical Analysis of Honeypot Data and Building of Kyoto 2006+ Dataset for NIDS Evaluation},
-  year      = {2011},
-  isbn      = {9781450307680},
-  publisher = {Association for Computing Machinery},
-  address   = {New York, NY, USA},
-  url       = {https://doi.org/10.1145/1978672.1978676},
-  doi       = {10.1145/1978672.1978676},
-  booktitle = {Proceedings of the First Workshop on Building Analysis Datasets and Gathering Experience Returns for Security},
-  pages     = {29–36},
-  numpages  = {8},
-  keywords  = {honeypot data, NIDS, Kyoto 2006+ dataset},
-  location  = {Salzburg, Austria},
-  series    = {BADGERS '11}
+@misc{CVE-2019-19781,
+  title        = {{CVE}-2019-19781.},
+  howpublished = {Available from MITRE, {CVE-ID} {CVE}-2019-19781.},
+  month        = dec # {~13},
+  year         = {2019},
+  url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-19781},
+  urldate      = {27 September 2021}
 }
 
-@inproceedings{Borisaniya2012,
-  author    = {Borisaniya, Bhavesh and Patel, Avi and Patel, Dhiren R. and Patel, Hiren},
-  editor    = {Dimitrakos, Theo and Moona, Rajat and Patel, Dhiren and McKnight, D. Harrison},
-  title     = {Incorporating Honeypot for Intrusion Detection in Cloud Infrastructure},
-  booktitle = {Trust Management VI},
-  year      = {2012},
-  publisher = {Springer Berlin Heidelberg},
-  address   = {Berlin, Heidelberg},
-  pages     = {84--96},
-  abstract  = {Cloud services delivered as utility computing over the Internet makes it an attractive target for cyber intruders. Protecting network accessible Cloud resources and services from ever increasing cyber threats is of great concern. Most of the Network based Intrusion Detection System (NIDS) being rule based and therefore only capable of identifying known attacks (through pattern matching). Traditional Anomaly Detection based IDS may generate more number of false positives.},
-  isbn      = {978-3-642-29852-3}
+@misc{CVE-2018-0101,
+  title        = {{CVE}-2018-0101.},
+  howpublished = {Available from MITRE, {CVE-ID} {CVE}-2018-0101.},
+  month        = nov # {~27},
+  year         = {2017},
+  url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2018-0101},
+  urldate      = {27 September 2021}
 }
 
-@book{YinZhang2016,
-  doi       = {10.1007/978-3-319-38904-2},
-  url       = {https://doi.org/10.1007/978-3-319-38904-2},
-  year      = {2016},
-  publisher = {Springer International Publishing},
-  editor    = {Yin Zhang and Limei Peng and Chan-Hyun Youn},
-  title     = {Cloud Computing}
+##################################################################################################################
+# ARTICLE
+##################################################################################################################
+
+@article{iocta2020,
+  author  = {Europol},
+  title   = {Internet Organised Crime Threat Assessment (IOCTA)},
+  journal = {European Union Agency for Law Enforcement Cooperation},
+  volume  = {9},
+  number  = {1},
+  year    = {2020}
+}
+
+@article{fahim2020,
+  author  = {Fahim Abbasi},
+  title   = {2020 Trustwave Global Security Report},
+  journal = {Trustwave},
+  volume  = {},
+  number  = {},
+  year    = {2020}
+}
+
+@article{sokol2017,
+  author  = {Sokol, Pavol and Míšek, Jakub and Husák, Martin},
+  year    = {2017},
+  month   = {02},
+  pages   = {},
+  title   = {Honeypots and honeynets: issues of privacy},
+  volume  = {2017},
+  journal = {EURASIP Journal on Information Security},
+  doi     = {10.1186/s13635-017-0057-4}
+}
+
+@article{kreuter2004,
+  title   = {Where server virtualization was born},
+  author  = {Kreuter, D},
+  journal = {Virtual Strategy Magazine},
+  year    = {2004}
+}
+
+@article{daniels2009,
+  author     = {Daniels, Jeff},
+  title      = {Server Virtualization Architecture and Implementation},
+  year       = {2009},
+  issue_date = {September 2009},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {16},
+  number     = {1},
+  issn       = {1528-4972},
+  url        = {https://doi.org/10.1145/1618588.1618592},
+  doi        = {10.1145/1618588.1618592},
+  journal    = {XRDS},
+  month      = sep,
+  pages      = {8–12},
+  numpages   = {5}
+}
+
+@article{lichstei1969,
+  title     = {When should you emulate},
+  author    = {Lichstein. HA},
+  journal   = {Datamation},
+  volume    = {15},
+  number    = {11},
+  pages     = {205},
+  year      = {1969},
+  publisher = {CAHNERS-DENVER PUBLISHING CO 2000 CLEARWATER DR, OAK BROOK, IL 60523-8809}
+}
+
+@article{paxson1999,
+  author     = {Paxson, Vern},
+  title      = {Bro: A System for Detecting Network Intruders in Real-Time},
+  year       = {1999},
+  issue_date = {Dec. 1999},
+  publisher  = {Elsevier North-Holland, Inc.},
+  address    = {USA},
+  volume     = {31},
+  number     = {23–24},
+  issn       = {1389-1286},
+  url        = {https://doi.org/10.1016/S1389-1286(99)00112-7},
+  doi        = {10.1016/S1389-1286(99)00112-7},
+  journal    = {Comput. Netw.},
+  month      = dec,
+  pages      = {2435–2463},
+  numpages   = {29},
+  keywords   = {passive network monitoring, network intrusion detection, network monitoring evasion, domain-specific languages}
+}
+
+@article{kreibich2004,
+  author     = {Kreibich, Christian and Crowcroft, Jon},
+  title      = {Honeycomb: Creating Intrusion Detection Signatures Using Honeypots},
+  year       = {2004},
+  issue_date = {January 2004},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {34},
+  number     = {1},
+  issn       = {0146-4833},
+  url        = {https://doi.org/10.1145/972374.972384},
+  doi        = {10.1145/972374.972384},
+  journal    = {SIGCOMM Comput. Commun. Rev.},
+  month      = jan,
+  pages      = {51–56},
+  numpages   = {6},
+  keywords   = {suffix trees, traffic signatures, honeypots, longest-common-substring algorithms, pattern detection, network intrusion detection, protocol analysis}
 }
 
 @article{Wang2010,
@@ -188,16 +306,6 @@
   numpages   = {3}
 }
 
-@misc{regalado2020,
-  title     = {Who Coined 'Cloud Computing'?},
-  url       = {https://www.technologyreview.com/2011/10/31/257406/who-coined-cloud-computing/},
-  journal   = {MIT Technology Review},
-  publisher = {MIT Technology Review},
-  author    = {Regalado, Antonio},
-  year      = {2020},
-  month     = {Feb}
-}
-
 @article{Nithin2012,
   title     = {Cloud security using honeypot systems},
   author    = {Nithin Chandra, SR and Madhuri, TM},
@@ -209,64 +317,74 @@
   publisher = {Citeseer}
 }
 
-@inproceedings{Dillon2010,
-  doi       = {10.1109/aina.2010.187},
-  url       = {https://doi.org/10.1109/aina.2010.187},
-  year      = {2010},
-  publisher = {{IEEE}},
-  author    = {Tharam Dillon and Chen Wu and Elizabeth Chang},
-  title     = {Cloud Computing: Issues and Challenges},
-  booktitle = {2010 24th {IEEE} International Conference on Advanced Information Networking and Applications}
+@article{Jiang2006,
+  doi       = {10.1016/j.jpdc.2006.04.012},
+  url       = {https://doi.org/10.1016/j.jpdc.2006.04.012},
+  year      = {2006},
+  month     = sep,
+  publisher = {Elsevier {BV}},
+  volume    = {66},
+  number    = {9},
+  pages     = {1165--1180},
+  author    = {Xuxian Jiang and Dongyan Xu and Yi-Min Wang},
+  title     = {Collapsar: A {VM}-based honeyfarm and reverse honeyfarm architecture for network attack capture and detention},
+  journal   = {Journal of Parallel and Distributed Computing}
 }
 
-@techreport{Mell2011,
-  doi         = {10.6028/nist.sp.800-145},
-  url         = {https://doi.org/10.6028/nist.sp.800-145},
-  year        = {2011},
-  publisher   = {National Institute of Standards and Technology},
-  institution = {National Institute of Standards and Technology},
-  author      = {P M Mell and T Grance},
-  title       = {The {NIST} definition of cloud computing}
+@article{NawrockiWSKS2016,
+  author        = {Marcin Nawrocki and Matthias W{\"{a}}hlisch and Thomas C. Schmidt and Christian Keil and Jochen Sch{\"{o}}nfelder},
+  title         = {A Survey on Honeypot Software and Data Analysis},
+  journal       = {CoRR},
+  volume        = {abs/1608.06249},
+  year          = {2016},
+  url           = {http://arxiv.org/abs/1608.06249},
+  archiveprefix = {arXiv},
+  eprint        = {1608.06249},
+  timestamp     = {Mon, 13 Aug 2018 16:47:59 +0200},
+  biburl        = {https://dblp.org/rec/journals/corr/NawrockiWSKS16.bib},
+  bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
-@inproceedings{Li2010,
-  author    = {Li, Ang and Yang, Xiaowei and Kandula, Srikanth and Zhang, Ming},
-  title     = {CloudCmp: Comparing Public Cloud Providers},
-  year      = {2010},
-  isbn      = {9781450304832},
-  publisher = {Association for Computing Machinery},
-  address   = {New York, NY, USA},
-  url       = {https://doi.org/10.1145/1879141.1879143},
-  doi       = {10.1145/1879141.1879143},
-  booktitle = {Proceedings of the 10th ACM SIGCOMM Conference on Internet Measurement},
-  pages     = {1–14},
-  numpages  = {14},
-  keywords  = {performance, comparison, cost, cloud computing},
-  location  = {Melbourne, Australia},
-  series    = {IMC '10}
+
+@article{Kelly2021,
+  doi       = {10.3390/s21072433},
+  url       = {https://doi.org/10.3390/s21072433},
+  year      = {2021},
+  month     = apr,
+  publisher = {{MDPI} {AG}},
+  volume    = {21},
+  number    = {7},
+  pages     = {2433},
+  author    = {Christopher Kelly and Nikolaos Pitropakis and Alexios Mylonas and Sean McKeown and William J. Buchanan},
+  title     = {A Comparative Analysis of Honeypots on Different Cloud Platforms},
+  journal   = {Sensors}
 }
-@book{stroll2000,
-  author    = {Stoll, Clifford},
-  title     = {The  Cuckoo's Egg: Tracking a Spy through the Maze of Computer Espionage},
-  year      = {2000},
-  isbn      = {0743411463},
-  publisher = {Pocket Books}
+
+##################################################################################################################
+# INPROCEEDING
+##################################################################################################################
+
+@inproceedings{takemori2003,
+  author    = {Takemori, K. and Rikitake, K. and Miyake, Y. and Nakao, K.},
+  booktitle = {10th International Conference on Telecommunications, 2003. ICT 2003.},
+  title     = {Intrusion trap system: an efficient platform for gathering intrusion-related information},
+  year      = {2003},
+  volume    = {1},
+  number    = {},
+  pages     = {614-619 vol.1},
+  doi       = {10.1109/ICTEL.2003.1191480}
 }
-@inproceedings{Cheswick92,
-  author    = {Bill Cheswick},
-  title     = {An Evening with Berferd in which a cracker is Lured, Endured, and Studied},
-  booktitle = {In Proc. Winter USENIX Conference},
-  year      = {1992},
-  pages     = {163--174}
+
+@inproceedings{mcgrew2006,
+  author    = {McGrew, R.},
+  booktitle = {Proceedings of the 39th Annual Hawaii International Conference on System Sciences (HICSS'06)},
+  title     = {Experiences with Honeypot Systems: Development, Deployment, and Analysis},
+  year      = {2006},
+  volume    = {9},
+  number    = {},
+  pages     = {220a-220a},
+  doi       = {10.1109/HICSS.2006.172}
 }
-@book{Schneier2004,
-  author    = {Schneier, Bruce},
-  year      = {2004},
-  title     = {Secrets \& lies - IT-Sicherheit in einer vernetzten Welt},
-  edition   = {},
-  isbn      = {978-3-898-64302-3},
-  publisher = {Dpunkt-Verlag},
-  address   = {Köln}
-}
+
 @inproceedings{Mokube2007,
   author    = {Mokube, Iyatiti and Adams, Michele},
   title     = {Honeypots: Concepts, Approaches, and Challenges},
@@ -283,121 +401,103 @@
   location  = {Winston-Salem, North Carolina},
   series    = {ACM-SE 45}
 }
+
 @inproceedings{Kaur2014,
   title  = {Comparison of network security tools- Firewall, Intrusion Detection System and Honeypot},
   author = {Tejvir Kaur and Vimmi Malhotra and Dheerendra Singh},
   year   = {2014}
 }
 
-@misc{heicloud2021,
-  key       = {University Computing Center Heidelberg},
-  title        = {heiCLOUD - The Heidelberg University cloud infrastructure},
-  howpublished = {\url{https://heicloud.uni-heidelberg.de/heiCLOUD}},
-  year         = {2021},
-  note         = {Accessed: 2021-09-02}
+@inproceedings{Cheswick92,
+  author    = {Bill Cheswick},
+  title     = {An Evening with Berferd in which a cracker is Lured, Endured, and Studied},
+  booktitle = {In Proc. Winter USENIX Conference},
+  year      = {1992},
+  pages     = {163--174}
 }
 
-@misc{urz2021,
-  key          = {University Computing Center Heidelberg},
-  organization = {University Computing Center Heidelberg},
-  title        = {HeiCLOUD},
-  howpublished = {\url{https://www.urz.uni-heidelberg.de/en/service-catalogue/cloud/heicloud}},
-  year         = {2021},
-  note         = {Accessed: 2021-09-02}
+@inproceedings{Li2010,
+  author    = {Li, Ang and Yang, Xiaowei and Kandula, Srikanth and Zhang, Ming},
+  title     = {CloudCmp: Comparing Public Cloud Providers},
+  year      = {2010},
+  isbn      = {9781450304832},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/1879141.1879143},
+  doi       = {10.1145/1879141.1879143},
+  booktitle = {Proceedings of the 10th ACM SIGCOMM Conference on Internet Measurement},
+  pages     = {1–14},
+  numpages  = {14},
+  keywords  = {performance, comparison, cost, cloud computing},
+  location  = {Melbourne, Australia},
+  series    = {IMC '10}
 }
 
-@misc{statista2021,
-  author       = {Statista},
-  title        = {Year-over-year change in average monthly in-home data usage by device in the United States from January to March 2020},
-  howpublished = {\url{https://www.statista.com/statistics/1106821/covid-19-change-in-in-home-data-usage-in-us-2020/}},
-  year         = {2021},
-  note         = {Accessed: 2021-09-04}
+@inproceedings{Dillon2010,
+  doi       = {10.1109/aina.2010.187},
+  url       = {https://doi.org/10.1109/aina.2010.187},
+  year      = {2010},
+  publisher = {{IEEE}},
+  author    = {Tharam Dillon and Chen Wu and Elizabeth Chang},
+  title     = {Cloud Computing: Issues and Challenges},
+  booktitle = {2010 24th {IEEE} International Conference on Advanced Information Networking and Applications}
 }
 
-@misc{ibm2021,
-  author       = {},
-  title        = {IBM Cloud Hybrid. Open. Resilient. Your platform and partner for digital transformation.},
-  howpublished = {\url{https://www.ibm.com/cloud}},
-  year         = {}
+@inproceedings{Song2011,
+  author    = {Song, Jungsuk and Takakura, Hiroki and Okabe, Yasuo and Eto, Masashi and Inoue, Daisuke and Nakao, Koji},
+  title     = {Statistical Analysis of Honeypot Data and Building of Kyoto 2006+ Dataset for NIDS Evaluation},
+  year      = {2011},
+  isbn      = {9781450307680},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/1978672.1978676},
+  doi       = {10.1145/1978672.1978676},
+  booktitle = {Proceedings of the First Workshop on Building Analysis Datasets and Gathering Experience Returns for Security},
+  pages     = {29–36},
+  numpages  = {8},
+  keywords  = {honeypot data, NIDS, Kyoto 2006+ dataset},
+  location  = {Salzburg, Austria},
+  series    = {BADGERS '11}
 }
 
-@misc{aws2021,
-  author       = {},
-  title        = {},
-  howpublished = {},
-  year         = {}
+@inproceedings{Borisaniya2012,
+  author    = {Borisaniya, Bhavesh and Patel, Avi and Patel, Dhiren R. and Patel, Hiren},
+  editor    = {Dimitrakos, Theo and Moona, Rajat and Patel, Dhiren and McKnight, D. Harrison},
+  title     = {Incorporating Honeypot for Intrusion Detection in Cloud Infrastructure},
+  booktitle = {Trust Management VI},
+  year      = {2012},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {84--96},
+  abstract  = {Cloud services delivered as utility computing over the Internet makes it an attractive target for cyber intruders. Protecting network accessible Cloud resources and services from ever increasing cyber threats is of great concern. Most of the Network based Intrusion Detection System (NIDS) being rule based and therefore only capable of identifying known attacks (through pattern matching). Traditional Anomaly Detection based IDS may generate more number of false positives.},
+  isbn      = {978-3-642-29852-3}
 }
 
-@misc{google2021,
-  author       = {},
-  title        = {},
-  howpublished = {},
-  year         = {}
-}
-
-@article{iocta2020,
-  author  = {Europol},
-  title   = {Internet Organised Crime Threat Assessment (IOCTA)},
-  journal = {European Union Agency for Law Enforcement Cooperation},
-  volume  = {9},
-  number  = {1},
-  year    = {2020}
-}
-
-@misc{europol2021,
-  author       = {Europol},
-  title        = {About Europol},
-  howpublished = {\url{https://www.europol.europa.eu/about-europol}},
-  year         = {2021},
-  note         = {Accessed: 2021-09-04}
-}
-
-@misc{gonzalez2003,
-  author       = {Alberto Gonzalez, Jack Whitsitt},
-  title        = {The Bait and Switch Honeypot: An active and aggressive part of your network security infrastructure.},
-  howpublished = {\url{http://baitnswitch.sourceforge.net/}},
-  year         = {2002},
-  note         = {Accessed: 2021-09-06}
-}
-
-@article{fahim2020,
-  author  = {Fahim Abbasi},
-  title   = {2020 Trustwave Global Security Report},
-  journal = {Trustwave},
-  volume  = {},
-  number  = {},
-  year    = {2020}
-}
-
-@inproceedings{takemori2003,
-  author    = {Takemori, K. and Rikitake, K. and Miyake, Y. and Nakao, K.},
-  booktitle = {10th International Conference on Telecommunications, 2003. ICT 2003.},
-  title     = {Intrusion trap system: an efficient platform for gathering intrusion-related information},
-  year      = {2003},
-  volume    = {1},
+@inproceedings{Mahajan2017,
+  author    = {Mahajan, Varan and Peddoju, Sateesh K},
+  booktitle = {2017 International Conference on Computing, Communication and Automation (ICCCA)},
+  title     = {Integration of network intrusion detection systems and honeypot networks for cloud security},
+  year      = {2017},
+  volume    = {},
   number    = {},
-  pages     = {614-619 vol.1},
-  doi       = {10.1109/ICTEL.2003.1191480}
+  pages     = {829-834},
+  doi       = {10.1109/CCAA.2017.8229911}
 }
 
-@article{kreibich2004,
-  author     = {Kreibich, Christian and Crowcroft, Jon},
-  title      = {Honeycomb: Creating Intrusion Detection Signatures Using Honeypots},
-  year       = {2004},
-  issue_date = {January 2004},
-  publisher  = {Association for Computing Machinery},
-  address    = {New York, NY, USA},
-  volume     = {34},
-  number     = {1},
-  issn       = {0146-4833},
-  url        = {https://doi.org/10.1145/972374.972384},
-  doi        = {10.1145/972374.972384},
-  journal    = {SIGCOMM Comput. Commun. Rev.},
-  month      = jan,
-  pages      = {51–56},
-  numpages   = {6},
-  keywords   = {suffix trees, traffic signatures, honeypots, longest-common-substring algorithms, pattern detection, network intrusion detection, protocol analysis}
+@inproceedings{Kuwatly2004,
+  author    = {Kuwatly, I. and Sraj, M. and Al Masri, Z. and Artail, H.},
+  booktitle = {The IEEE/ACS International Conference onPervasive Services, 2004. ICPS 2004. Proceedings.},
+  title     = {A dynamic honeypot design for intrusion detection},
+  year      = {2004},
+  volume    = {},
+  number    = {},
+  pages     = {95-104},
+  doi       = {10.1109/PERSER.2004.1356776}
 }
+
+##################################################################################################################
+# BOOK
+##################################################################################################################
 
 @book{caswell2003,
   author    = {Caswell, Brian and Foster, James C. and Russell, Ryan and Beale, Jay and Posluns, Jeffrey},
@@ -407,97 +507,50 @@
   publisher = {Syngress Publishing}
 }
 
-@article{paxson1999,
-  author     = {Paxson, Vern},
-  title      = {Bro: A System for Detecting Network Intruders in Real-Time},
-  year       = {1999},
-  issue_date = {Dec. 1999},
-  publisher  = {Elsevier North-Holland, Inc.},
-  address    = {USA},
-  volume     = {31},
-  number     = {23–24},
-  issn       = {1389-1286},
-  url        = {https://doi.org/10.1016/S1389-1286(99)00112-7},
-  doi        = {10.1016/S1389-1286(99)00112-7},
-  journal    = {Comput. Netw.},
-  month      = dec,
-  pages      = {2435–2463},
-  numpages   = {29},
-  keywords   = {passive network monitoring, network intrusion detection, network monitoring evasion, domain-specific languages}
+@book{Schneier2004,
+  author    = {Schneier, Bruce},
+  year      = {2004},
+  title     = {Secrets \& lies - IT-Sicherheit in einer vernetzten Welt},
+  edition   = {},
+  isbn      = {978-3-898-64302-3},
+  publisher = {Dpunkt-Verlag},
+  address   = {Köln}
 }
 
-@article{sokol2017,
-  author  = {Sokol, Pavol and Míšek, Jakub and Husák, Martin},
-  year    = {2017},
-  month   = {02},
-  pages   = {},
-  title   = {Honeypots and honeynets: issues of privacy},
-  volume  = {2017},
-  journal = {EURASIP Journal on Information Security},
-  doi     = {10.1186/s13635-017-0057-4}
+@book{stroll2000,
+  author    = {Stoll, Clifford},
+  title     = {The  Cuckoo's Egg: Tracking a Spy through the Maze of Computer Espionage},
+  year      = {2000},
+  isbn      = {0743411463},
+  publisher = {Pocket Books}
 }
 
-@article{kreuter2004,
-  title   = {Where server virtualization was born},
-  author  = {Kreuter, D},
-  journal = {Virtual Strategy Magazine},
-  year    = {2004}
+@book{YinZhang2016,
+  doi       = {10.1007/978-3-319-38904-2},
+  url       = {https://doi.org/10.1007/978-3-319-38904-2},
+  year      = {2016},
+  publisher = {Springer International Publishing},
+  editor    = {Yin Zhang and Limei Peng and Chan-Hyun Youn},
+  title     = {Cloud Computing}
 }
 
-@article{daniels2009,
-  author     = {Daniels, Jeff},
-  title      = {Server Virtualization Architecture and Implementation},
-  year       = {2009},
-  issue_date = {September 2009},
-  publisher  = {Association for Computing Machinery},
-  address    = {New York, NY, USA},
-  volume     = {16},
-  number     = {1},
-  issn       = {1528-4972},
-  url        = {https://doi.org/10.1145/1618588.1618592},
-  doi        = {10.1145/1618588.1618592},
-  journal    = {XRDS},
-  month      = sep,
-  pages      = {8–12},
-  numpages   = {5}
+@book{Wendzel2021,
+  doi       = {10.1007/978-3-658-33423-9},
+  url       = {https://doi.org/10.1007/978-3-658-33423-9},
+  year      = {2021},
+  publisher = {Springer Fachmedien Wiesbaden},
+  author    = {Steffen Wendzel},
+  title     = {{IT}-Sicherheit f\"{u}r {TCP}/{IP}- und {IoT}-Netzwerke}
 }
 
-@misc{cert2021,
-  author       = {Federal Office for Information Security},
-  title        = {CERT-Bund},
-  howpublished = {\url{https://www.bsi.bund.de/EN/Topics/IT-Crisis-Management/CERT-Bund/cert-bund_node.html}},
-  year         = {2021},
-  note         = {Accessed: 2021-09-12}
-}
-
-@misc{docker2021,
-  author       = {Docker},
-  title        = {Docker Overview},
-  howpublished = {\url{https://docs.docker.com/get-started/overview/}},
-  year         = {2021},
-  note         = {Accessed: 2021-09-21}
-}
-
-@article{lichstei1969,
-  title     = {When should you emulate},
-  author    = {Lichstein. HA},
-  journal   = {Datamation},
-  volume    = {15},
-  number    = {11},
-  pages     = {205},
-  year      = {1969},
-  publisher = {CAHNERS-DENVER PUBLISHING CO 2000 CLEARWATER DR, OAK BROOK, IL 60523-8809}
-}
-
-@inproceedings{mcgrew2006,
-  author    = {McGrew, R.},
-  booktitle = {Proceedings of the 39th Annual Hawaii International Conference on System Sciences (HICSS'06)},
-  title     = {Experiences with Honeypot Systems: Development, Deployment, and Analysis},
-  year      = {2006},
-  volume    = {9},
-  number    = {},
-  pages     = {220a-220a},
-  doi       = {10.1109/HICSS.2006.172}
+@book{Spitzner2003,
+  author    = {Spitzner, Lance},
+  year      = {2003},
+  title     = {Honeypots - Tracking Hackers},
+  edition   = {},
+  isbn      = {978-0-321-10895-1},
+  publisher = {Addison-Wesley},
+  address   = {Amsterdam}
 }
 
 ##################################################################################################################
@@ -506,7 +559,7 @@
 
 @misc{adbhoney2021,
   author       = {Gabriel Cirlig},
-  title        = {ADBHoney},
+  title        = {{ADBHoney}},
   howpublished = {\url{https://github.com/huuck/ADBHoney}},
   year         = {2021},
   note         = {Accessed: 2021-09-26}
@@ -514,7 +567,7 @@
 
 @misc{cymmetria2018,
   author       = {Cymmetria Research},
-  title        = {Cisco ASA honeypot},
+  title        = {Cisco {ASA} honeypot},
   howpublished = {\url{https://github.com/Cymmetria/ciscoasa_honeypot}},
   year         = {2018},
   note         = {Accessed: 2021-09-26}
@@ -538,8 +591,8 @@
 }
 
 @misc{cowire2021,
-  author       = {Cowire},
-  title        = {Cowrie SSH/Telnet Honeypot },
+  author       = {Michel Oosterhof},
+  title        = {{Cowrie SSH/Telnet Honeypot}},
   howpublished = {\url{https://github.com/cowrie/cowrie}},
   year         = {2021},
   note         = {Accessed: 2021-09-26}
@@ -547,7 +600,7 @@
 
 @misc{ddosspot2021,
   author       = {},
-  title        = {DDoSPot},
+  title        = {{DDoSPot}},
   howpublished = {\url{https://github.com/aelth/ddospot}},
   year         = {2021},
   note         = {Accessed: 2021-09-26}
@@ -555,7 +608,7 @@
 
 @misc{dicompot2021,
   author       = {Mikael Keri},
-  title        = {Dicompot - A Digital Imaging and Communications in Medicine (DICOM) Honeypot},
+  title        = {{Dicompot - A Digital Imaging and Communications in Medicine (DICOM) Honeypot}},
   howpublished = {\url{https://github.com/nsmfoo/dicompot}},
   year         = {2021},
   note         = {Accessed: 2021-09-26}
