--- a/acronyms.tex
+++ b/acronyms.tex
@@ -26,3 +26,4 @@
 \DeclareAcronym{chargen}{short=CHARGEN, long=}
 \DeclareAcronym{udp}{short=UDP, long=}
 \DeclareAcronym{dicom}{short=DICOM, long=Digital Imaging and Communications in Medicine}
+\DeclareAcronym{rdp}{short=RDP, long=Remote Desktop Protocol}
