Update cloud security

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -27,3 +27,5 @@
 \DeclareAcronym{udp}{short=UDP, long=}
 \DeclareAcronym{dicom}{short=DICOM, long=Digital Imaging and Communications in Medicine}
 \DeclareAcronym{rdp}{short=RDP, long=Remote Desktop Protocol}
+\DeclareAcronym{aws}{short=AWS, long=Amazon Web Services}
+\DeclareAcronym{gc}{short=GCP, long=Google Cloud}
