Update cloud security

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -29,3 +29,5 @@
 \DeclareAcronym{rdp}{short=RDP, long=Remote Desktop Protocol}
 \DeclareAcronym{aws}{short=AWS, long=Amazon Web Services}
 \DeclareAcronym{gc}{short=GCP, long=Google Cloud}
+\DeclareAcronym{fhir}{short=FHIR, long=Fast Healthcare Interoperability Resources}
+\DeclareAcronym{ipp}{short=IPP, long=Internet Printing Protocol}
