--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
   fleqn,
   numbers=noendperiod,
   headings=normal,
-  %chapterprefix=true,
+  chapterprefix=true,
   version=3.03,
   toc=bibliography,
   listof=totoc,
@@ -76,10 +76,11 @@
 
 \include{titlepages-eng}
 \include{abstracts}
+\include{ack}
 
 \pagenumbering{Roman}
 
-\setcounter{tocdepth}{1}
+% \setcounter{tocdepth}{1}
 \tableofcontents
 \newpage
 
