--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,9 @@
   chapterprefix=true,
   version=3.03,
   toc=bibliography,
-  listof=totoc,
+  % listof=totoc,
+  listof=nochaptergap,
+  parskip=half
 ]{scrreprt}
 
 \usepackage[utf8]{inputenc}
@@ -33,8 +35,6 @@
 \usepackage{booktabs}
 % sideways figure
 \usepackage{rotating}
-
-\usepackage{parskip} 
 
 \usepackage[numbers]{natbib}
 
