--- a/references.bib
+++ b/references.bib
@@ -152,6 +152,42 @@
   urldate      = {27 September 2021}
 }
 
+@misc{CVE-2006-2369,
+  title        = {{CVE}-2006-2369.},
+  howpublished = {Available from MITRE, {CVE-ID} {CVE}-2006-2369.},
+  month        = may # {~15},
+  year         = {2006},
+  url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2006-2369},
+  urldate      = {27 September 2021}
+}
+
+@misc{CVE-2001-0540,
+  title        = {{CVE}-2001-0540.},
+  howpublished = {Available from MITRE, {CVE-ID} {CVE}-2001-0540.},
+  month        = mar # {~09},
+  year         = {2002},
+  url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2001-0540},
+  urldate      = {27 September 2021}
+}
+
+@misc{CVE-2012-0152,
+  title        = {{CVE}-2012-0152.},
+  howpublished = {Available from MITRE, {CVE-ID} {CVE}-2012-0152.},
+  month        = dec # {~13},
+  year         = {2011},
+  url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2012-0152},
+  urldate      = {27 September 2021}
+}
+
+@misc{CVE-2005-4050,
+  title        = {{CVE}-2005-4050.},
+  howpublished = {Available from MITRE, {CVE-ID} {CVE}-2005-4050.},
+  month        = dec # {~07},
+  year         = {2005},
+  url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2005-4050},
+  urldate      = {27 September 2021}
+}
+
 ##################################################################################################################
 # ARTICLE
 ##################################################################################################################
@@ -357,6 +393,17 @@
   author    = {Christopher Kelly and Nikolaos Pitropakis and Alexios Mylonas and Sean McKeown and William J. Buchanan},
   title     = {A Comparative Analysis of Honeypots on Different Cloud Platforms},
   journal   = {Sensors}
+}
+
+@article{combe2016,
+  author  = {Combe, Theo and Martin, Antony and Di Pietro, Roberto},
+  journal = {IEEE Cloud Computing},
+  title   = {To Docker or Not to Docker: A Security Perspective},
+  year    = {2016},
+  volume  = {3},
+  number  = {5},
+  pages   = {54-62},
+  doi     = {10.1109/MCC.2016.100}
 }
 
 ##################################################################################################################
@@ -727,6 +774,14 @@
   author       = {Sylvain Peyrefitte},
   title        = {RDPY: Remote Desktop Protocol in twisted python},
   howpublished = {\url{https://github.com/citronneur/rdpy}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{fatt2021,
+  author       = {Adel Karimi},
+  title        = {{FATT /fingerprintAllTheThings} - a pyshark based script for extracting network metadata and fingerprints from pcap files and live network traffic},
+  howpublished = {\url{https://github.com/0x4D31/fatt}},
   year         = {2021},
   note         = {Accessed: 2021-09-26}
 }
