--- a/references.bib
+++ b/references.bib
@@ -786,6 +786,22 @@
   note         = {Accessed: 2021-09-26}
 }
 
+@misc{ja32021,
+  author       = {John B. Althouse and Jeff Atkinson and Josh Atkins},
+  title        = {{JA3} - A method for profiling SSL/TLS Clients},
+  howpublished = {\url{https://github.com/salesforce/ja3}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{hassh2021,
+  author       = {Adel Karimi and Ben Reardson and John Althouse and Jeff Atkinson and Josh Atkins},
+  title        = {{HASSH} - a Profiling Method for SSH Clients and Servers},
+  howpublished = {\url{https://github.com/salesforce/hassh}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
 ##################################################################################################################
 # END
 ##################################################################################################################
