Update cloud security

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -8,7 +8,9 @@
 \DeclareAcronym{dtk}{short=DTK, long=Deception Toolkit}
 \DeclareAcronym{cert}{short=CERT, long=Computer Emergency Response Team}
 \DeclareAcronym{os}{short=OS, long=operating system}
-\DeclareAcronym{ids}{short=IDS, long=Intrusion Detection Systems}
+\DeclareAcronym{ids}{short=IDS, long=intrusion detection system}
+\DeclareAcronym{ips}{short=IPD, long=intrusion prevention system}
+\DeclareAcronym{nsm}{short=NSM, long=network security monitoring}
 \DeclareAcronym{iocta}{short=IOCTA, long=Internet Organised Crime Threat Assessment}
 \DeclareAcronym{dmz}{short=DMZ, long=demilitarized zone}
 \DeclareAcronym{eu}{short=EU, long=European Union}
