--- a/references.bib
+++ b/references.bib
@@ -802,6 +802,31 @@
   note         = {Accessed: 2021-09-26}
 }
 
+@misc{spiderfoot2021,
+  author       = {Steve Micallef},
+  title        = {SpiderFoot automates OSINT for threat intelligence and mapping your attack surface},
+  howpublished = {\url{https://github.com/smicallef/spiderfoot}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{suricata2021,
+  author       = {},
+  title        = {Suricata},
+  howpublished = {\url{https://github.com/OISF/suricata}},
+  organization = {Open Information Security Foundation},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
+@misc{p0f2021,
+  author       = {Michal Zalewski},
+  title        = {{p0f} v3: passive fingerprinter},
+  howpublished = {\url{https://github.com/p0f/p0f}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
 ##################################################################################################################
 # END
 ##################################################################################################################
