--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,8 @@
 \usepackage{booktabs}
 % sideways figure
 \usepackage{rotating}
+% Used for subfigures
+\usepackage{subcaption}
 
 \usepackage[numbers]{natbib}
 
