Update cloud security

--- a/references.bib
+++ b/references.bib
@@ -188,6 +188,14 @@
   urldate      = {27 September 2021}
 }
 
+@misc{CVE-2021-42013,
+  title        = {{CVE}-2021-42013.},
+  howpublished = {Available from MITRE, {CVE-ID} {CVE}-2021-42013.},
+  month        = oct # {~06},
+  year         = {2021},
+  url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-42013},
+  urldate      = {27 September 2021}
+}
 ##################################################################################################################
 # ARTICLE
 ##################################################################################################################
