Update cloud security

--- a/main.tex
+++ b/main.tex
@@ -9,8 +9,8 @@
   chapterprefix=true,
   version=3.03,
   toc=bibliography,
-  % listof=totoc,
-  listof=nochaptergap,
+  listof=totoc,
+  % listof=nochaptergap,
   parskip=half
 ]{scrreprt}
 
@@ -42,7 +42,7 @@
 
 \include{acronyms}
 \include{quote}
-\include{network-config}
+% \include{network-config}
 \newcommand*{\fullref}[1]{\hyperref[{#1}]{\autoref*{#1}, \nameref*{#1}}}
 
 
