Update tpot architecture

--- a/references.bib
+++ b/references.bib
@@ -32,7 +32,17 @@
   author      = {P M Mell and T Grance},
   title       = {The {NIST} definition of cloud computing}
 }
-
+@techreport{vetterl2020,
+  author      = {Vetterl, Alexander},
+  title       = {{Honeypots in the age of universal attacks and the Internet
+                 of Things}},
+  year        = 2020,
+  month       = feb,
+  url         = {https://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-944.pdf},
+  institution = {University of Cambridge, Computer Laboratory},
+  doi         = {10.48456/tr-944},
+  number      = {UCAM-CL-TR-944}
+}
 ##################################################################################################################
 # MISC
 ##################################################################################################################
@@ -770,9 +780,17 @@
   note         = {Accessed: 2021-09-26}
 }
 
+@misc{mailoney2021,
+  author       = {},
+  title        = {{Mailoney} - An {SMTP} Honeypot },
+  howpublished = {\url{https://github.com/phin3has/mailoney}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
 @misc{medpot2021,
   author       = {Markus Schmall},
-  title        = {Medpot: HL7 / FHIR honeypot },
+  title        = {Medpot: {HL7} / {FHIR} honeypot },
   howpublished = {\url{https://github.com/schmalle/medpot}},
   year         = {2021},
   note         = {Accessed: 2021-09-26}
@@ -834,6 +852,16 @@
   year         = {2021},
   note         = {Accessed: 2021-09-26}
 }
+
+@misc{elastic2021,
+  author       = {},
+  title        = {{The Elastic Stack}},
+  howpublished = {\url{https://www.elastic.co/elastic-stack/}},
+  organization = {Elasticsearch B.V.},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
 
 ##################################################################################################################
 # END
