--- a/acronyms.tex
+++ b/acronyms.tex
@@ -23,13 +23,14 @@
 \DeclareAcronym{ics}{short=ICS, long=Industrial control systems}
 \DeclareAcronym{scada}{short=SCADA, long=Supervisory Control and Data Acquisition}
 \DeclareAcronym{ddos}{short=DDoS, long=Distributed Denial of Service}
-\DeclareAcronym{ntp}{short=NTP, long=}
-\DeclareAcronym{ssdp}{short=SSDP, long=}
-\DeclareAcronym{chargen}{short=CHARGEN, long=}
-\DeclareAcronym{udp}{short=UDP, long=}
+\DeclareAcronym{ntp}{short=NTP, long=Network Time Protocol}
+\DeclareAcronym{dns}{short=DNS, long=Domain Name System}
+\DeclareAcronym{ssdp}{short=SSDP, long=Simple Service Discovery Protocol}
+\DeclareAcronym{chargen}{short=CHARGEN, long=Character Generator Protocol}
+\DeclareAcronym{udp}{short=UDP, long=User Datagram Protocol}
 \DeclareAcronym{dicom}{short=DICOM, long=Digital Imaging and Communications in Medicine}
 \DeclareAcronym{rdp}{short=RDP, long=Remote Desktop Protocol}
 \DeclareAcronym{aws}{short=AWS, long=Amazon Web Services}
-\DeclareAcronym{gc}{short=GCP, long=Google Cloud}
+\DeclareAcronym{gcp}{short=GCP, long=Google Cloud Platform}
 \DeclareAcronym{fhir}{short=FHIR, long=Fast Healthcare Interoperability Resources}
 \DeclareAcronym{ipp}{short=IPP, long=Internet Printing Protocol}
