--- a/acronyms.tex
+++ b/acronyms.tex
@@ -34,3 +34,4 @@
 \DeclareAcronym{gcp}{short=GCP, long=Google Cloud Platform}
 \DeclareAcronym{fhir}{short=FHIR, long=Fast Healthcare Interoperability Resources}
 \DeclareAcronym{ipp}{short=IPP, long=Internet Printing Protocol}
+\DeclareAcronym{acl}{short=ACL, long=Access Control List}
