--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,11 @@
 \include{quote}
 % \include{network-config}
 \newcommand*{\fullref}[1]{\hyperref[{#1}]{\autoref*{#1}, \nameref*{#1}}}
+\newcommand{\ipAddress}[1]{%
+    {\fontfamily{pcr}\selectfont%
+        #1%
+    }%
+}
 
 
 \newcommand*{\files}{
