--- a/references.bib
+++ b/references.bib
@@ -12,15 +12,8 @@
   year      = {2003},
   address   = {Washington, D.C.},
   publisher = {{USENIX} Association},
+  booktitle = {10th DFN-CERT Workshop},
   month     = aug
-}
-
-@conference{Diebold2005,
-  author    = {P. Diebold, A. Hess, G. Schaefer},
-  title     = {A Honeypot Architecture for Detecting and Analyzing Unknown Network Attacks},
-  publisher = {Telecommunication Networks Group, Technische Universität Berlin, Germany,},
-  year      = {2005},
-  month     = {Feburary}
 }
 
 @techreport{Mell2011,
@@ -145,6 +138,7 @@
 }
 
 @misc{CVE-2019-19781,
+  key          = {CVE-2019-19781},
   title        = {{CVE}-2019-19781.},
   howpublished = {Available from MITRE, {CVE-ID} {CVE}-2019-19781.},
   month        = dec # {~13},
@@ -154,6 +148,7 @@
 }
 
 @misc{CVE-2018-0101,
+  key          = {CVE-2018-0101},
   title        = {{CVE}-2018-0101.},
   howpublished = {Available from MITRE, {CVE-ID} {CVE}-2018-0101.},
   month        = nov # {~27},
@@ -163,6 +158,7 @@
 }
 
 @misc{CVE-2006-2369,
+  key          = {CVE-2006-2369},
   title        = {{CVE}-2006-2369.},
   howpublished = {Available from MITRE, {CVE-ID} {CVE}-2006-2369.},
   month        = may # {~15},
@@ -172,6 +168,7 @@
 }
 
 @misc{CVE-2001-0540,
+  key          = {CVE-2001-0540},
   title        = {{CVE}-2001-0540.},
   howpublished = {Available from MITRE, {CVE-ID} {CVE}-2001-0540.},
   month        = mar # {~09},
@@ -181,6 +178,7 @@
 }
 
 @misc{CVE-2012-0152,
+  key          = {CVE-2012-0152},
   title        = {{CVE}-2012-0152.},
   howpublished = {Available from MITRE, {CVE-ID} {CVE}-2012-0152.},
   month        = dec # {~13},
@@ -190,6 +188,7 @@
 }
 
 @misc{CVE-2005-4050,
+  key          = {CVE-2005-4050},
   title        = {{CVE}-2005-4050.},
   howpublished = {Available from MITRE, {CVE-ID} {CVE}-2005-4050.},
   month        = dec # {~07},
@@ -199,6 +198,7 @@
 }
 
 @misc{CVE-2021-42013,
+  key          = {CVE-2021-42013},
   title        = {{CVE}-2021-42013.},
   howpublished = {Available from MITRE, {CVE-ID} {CVE}-2021-42013.},
   month        = oct # {~06},
@@ -428,6 +428,22 @@
 # INPROCEEDING
 ##################################################################################################################
 
+@inproceedings{Diebold2005,
+  author    = {Diebold, Patrick
+               and Hess, Andreas
+               and Sch{\"a}fer, G{\"u}nter},
+  editor    = {M{\"u}ller, Paul
+               and Gotzhein, Reinhard
+               and Schmitt, Jens B.},
+  title     = {A Honeypot Architecture for Detecting and Analyzing Unknown Network Attacks},
+  booktitle = {Kommunikation in Verteilten Systemen (KiVS)},
+  year      = {2005},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {245--255},
+  isbn      = {978-3-540-27301-1}
+}
+
 @inproceedings{takemori2003,
   author    = {Takemori, K. and Rikitake, K. and Miyake, Y. and Nakao, K.},
   booktitle = {10th International Conference on Telecommunications, 2003. ICT 2003.},
@@ -468,9 +484,16 @@
 }
 
 @inproceedings{Kaur2014,
-  title  = {Comparison of network security tools- Firewall, Intrusion Detection System and Honeypot},
-  author = {Tejvir Kaur and Vimmi Malhotra and Dheerendra Singh},
-  year   = {2014}
+  title      = {Comparison of network security tools- Firewall, Intrusion Detection System and Honeypot},
+  author     = {Tejvir Kaur and Vimmi Malhotra and Dheerendra Singh},
+  year       = {2014},
+  shorttitle = {IJERSTE},
+  booktitle  = {International Journal of Enhanced Research in Science Technology \& Engineering},
+  pages      = {200-204},
+  location   = {India},
+  volume     = {3},
+  issue      = {2},
+  issn       = {2319-7463}
 }
 
 @inproceedings{Cheswick92,
@@ -622,6 +645,14 @@
 # START T-Pot honeypots
 ##################################################################################################################
 
+@misc{tpot2021,
+  author       = {Marco Ochse},
+  title        = {{T-Pot}},
+  howpublished = {\url{https://github.com/telekom-security/tpotce}},
+  year         = {2021},
+  note         = {Accessed: 2021-09-26}
+}
+
 @misc{adbhoney2021,
   author       = {Gabriel Cirlig},
   title        = {{ADBHoney}},
@@ -664,7 +695,7 @@
 }
 
 @misc{ddosspot2021,
-  author       = {},
+  key          = {ddosspot},
   title        = {{DDoSPot}},
   howpublished = {\url{https://github.com/aelth/ddospot}},
   year         = {2021},
@@ -680,7 +711,7 @@
 }
 
 @misc{dionaea2021,
-  author       = {},
+  key          = {dionaea},
   title        = {dionaea - catches bugs},
   howpublished = {\url{https://github.com/DinoTools/dionaea}},
   year         = {2021},
@@ -781,7 +812,7 @@
 }
 
 @misc{mailoney2021,
-  author       = {},
+  key          = {mailoney},
   title        = {{Mailoney} - An {SMTP} Honeypot },
   howpublished = {\url{https://github.com/phin3has/mailoney}},
   year         = {2021},
@@ -837,7 +868,7 @@
 }
 
 @misc{suricata2021,
-  author       = {},
+  key          = {suricata},
   title        = {Suricata},
   howpublished = {\url{https://github.com/OISF/suricata}},
   organization = {Open Information Security Foundation},
@@ -854,7 +885,7 @@
 }
 
 @misc{elastic2021,
-  author       = {},
+  key          = {elasticsearch},
   title        = {{The Elastic Stack}},
   howpublished = {\url{https://www.elastic.co/elastic-stack/}},
   organization = {Elasticsearch B.V.},
