Fix warning in report

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,8 @@
 \usepackage{listings}
 \usepackage{csquotes}
 \usepackage{acro}
+% Needed to get rid of warnings in scrreprt with toc deprecated
+\usepackage{scrhack}
 % TODOs package, could be removed in the final paper
 % set length necessary to get rid warning message
 \setlength {\marginparwidth }{2cm} 
