Fix grammar in thesis

--- a/references.bib
+++ b/references.bib
@@ -686,7 +686,7 @@
   note         = {Accessed: 2021-09-26}
 }
 
-@misc{cowire2021,
+@misc{cowrie2021,
   author       = {Michel Oosterhof},
   title        = {{Cowrie SSH/Telnet Honeypot}},
   howpublished = {\url{https://github.com/cowrie/cowrie}},
