Update grammar check

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -35,3 +35,4 @@
 \DeclareAcronym{fhir}{short=FHIR, long=Fast Healthcare Interoperability Resources}
 \DeclareAcronym{ipp}{short=IPP, long=Internet Printing Protocol}
 \DeclareAcronym{acl}{short=ACL, long=Access Control List}
+\DeclareAcronym{belwue}{short=BelWÜ, long=Baden-Württembergs extended LAN}
