Update result section

--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,15 @@
 \usepackage{subcaption}
 
 \usepackage{listings}
+\lstset{basicstyle=\ttfamily,
+  showstringspaces=false,
+  commentstyle=\color{red},
+  keywordstyle=\color{blue},
+  breaklines=true,
+  postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space},
+  numbers=left,
+  stepnumber=1,
+}
 
 \usepackage[numbers]{natbib}
 
