--- a/titlepages-eng.tex
+++ b/titlepages-eng.tex
@@ -1,7 +1,7 @@
 \thispagestyle{empty}
 \begin{center}
   \renewcommand{\baselinestretch}{2.00}
-  \Large\sffamily
+  \Large%\sffamily
   Faculty of Mathematics and Computer Science\\
   \large Heidelberg University
   \par\vfill\normalfont
@@ -17,10 +17,8 @@
 \thispagestyle{empty}
 \begin{center}
   \renewcommand{\baselinestretch}{2.00}
-  \Large\bfseries\sffamily
-    Honeypot Implementation\\
-    in a\\
-    Cloud Environment
+  \Large\bfseries%\sffamily
+    Honeypot Implementation in a Cloud Environment
   \par
   \vfill
   \large\normalfont
