--- a/references.bib
+++ b/references.bib
@@ -36,6 +36,32 @@
   doi         = {10.48456/tr-944},
   number      = {UCAM-CL-TR-944}
 }
+
+@techreport{bsi2021,
+  author      = {BSI},
+  institution = {Bundesamt für Sicherheit in der Informationstechnik},
+  title       = {Die Lage der IT-Sicherheit in Deutschland 2021},
+  url         = {https://www.bsi.bund.de/DE/Service-Navi/Publikationen/Lagebericht/lagebericht_node.html},
+  month       = {Sep},
+  year        = {2021},
+  number      = {BSI-LB21/510}
+}
+
+@techreport{rfc4250,
+  author       = {Sami Lehtinen and Chris Lonvick},
+  title        = {{The Secure Shell (SSH) Protocol Assigned Numbers}},
+  howpublished = {Internet Requests for Comments},
+  type         = {{RFC}},
+  number       = 4250,
+  pages        = {1-56},
+  year         = {2006},
+  month        = {January},
+  issn         = {2070-1721},
+  publisher    = {{RFC Editor}},
+  institution  = {{RFC Editor}},
+  url          = {https://www.rfc-editor.org/rfc/rfc4250.txt}
+}
+
 ##################################################################################################################
 # MISC
 ##################################################################################################################
