--- a/acronyms.tex
+++ b/acronyms.tex
@@ -36,3 +36,5 @@
 \DeclareAcronym{ipp}{short=IPP, long=Internet Printing Protocol}
 \DeclareAcronym{acl}{short=ACL, long=Access Control List}
 \DeclareAcronym{belwue}{short=BelWÜ, long=Baden-Württembergs extended LAN}
+\DeclareAcronym{bpp}{short=BPP, long=Binary Packet Protocol}
+\DeclareAcronym{mac}{short=MAC, long=Message Authentication Code}
