--- a/references.bib
+++ b/references.bib
@@ -62,6 +62,21 @@
   url          = {https://www.rfc-editor.org/rfc/rfc4250.txt}
 }
 
+@techreport{rfc4253,
+  author       = {Tatu Ylonen and Chris Lonvick},
+  title        = {{The Secure Shell (SSH) Transport Layer Protocol}},
+  howpublished = {Internet Requests for Comments},
+  type         = {{RFC}},
+  number       = 4253,
+  pages        = {1-32},
+  year         = {2006},
+  month        = {January},
+  issn         = {2070-1721},
+  publisher    = {{RFC Editor}},
+  institution  = {{RFC Editor}},
+  url          = {https://www.rfc-editor.org/rfc/rfc4253.txt}
+}
+
 ##################################################################################################################
 # MISC
 ##################################################################################################################
