--- a/references.bib
+++ b/references.bib
@@ -37,6 +37,18 @@
   number      = {UCAM-CL-TR-944}
 }
 
+@techreport{csec2021,
+  author      = {CSEC},
+  institution = {Communications Security Establishment Canada},
+  title       = {Information Technology Security Guideline},
+  subtitle    = {{Network Security Zoning - Design Considerations for Placement of Services within Zones}},
+  url         = {https://cyber.gc.ca/sites/default/files/publications/itsg-38-eng.pdf},
+  month       = {May},
+  year        = {2009},
+  number      = {ITSG-38}
+}
+
+
 @techreport{bsi2021,
   author      = {BSI},
   institution = {Bundesamt für Sicherheit in der Informationstechnik},
