--- a/acronyms.tex
+++ b/acronyms.tex
@@ -38,3 +38,4 @@
 \DeclareAcronym{belwue}{short=BelWÜ, long=Baden-Württembergs extended LAN}
 \DeclareAcronym{bpp}{short=BPP, long=Binary Packet Protocol}
 \DeclareAcronym{mac}{short=MAC, long=Message Authentication Code}
+\DeclareAcronym{soho}{short=SOHO, long=Small Office Home Office}
