--- a/main.tex
+++ b/main.tex
@@ -80,6 +80,9 @@
 \npthousandsep{\,}
 
 
+\usepackage[usestackEOL]{stackengine}
+\strutlongstacks{T}
+
 \newcommand*{\files}{
     introduction,
     background,
@@ -95,7 +98,7 @@
 
 \title{Honeypot Implementation in a Cloud Environment}
 \author{Stefan Machmeier}
-\date{01. Feburary 2022}
+\date{01. February 2022}
 
 \begin{document}
 
