Update concept chapter

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -39,3 +39,4 @@
 \DeclareAcronym{bpp}{short=BPP, long=Binary Packet Protocol}
 \DeclareAcronym{mac}{short=MAC, long=Message Authentication Code}
 \DeclareAcronym{soho}{short=SOHO, long=Small Office Home Office}
+\DeclareAcronym{snmp}{short=SNMP, long=Simple Network Management Protocol}
