--- a/references.bib
+++ b/references.bib
@@ -128,27 +128,6 @@
   note         = {Accessed: 2021-09-04}
 }
 
-@misc{ibm2021,
-  author       = {},
-  title        = {IBM Cloud Hybrid. Open. Resilient. Your platform and partner for digital transformation.},
-  howpublished = {\url{https://www.ibm.com/cloud}},
-  year         = {}
-}
-
-@misc{aws2021,
-  author       = {},
-  title        = {},
-  howpublished = {},
-  year         = {}
-}
-
-@misc{google2021,
-  author       = {},
-  title        = {},
-  howpublished = {},
-  year         = {}
-}
-
 @misc{europol2021,
   author       = {Europol},
   title        = {About Europol},
@@ -259,6 +238,16 @@
   url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-42013},
   urldate      = {27 September 2021}
 }
+
+@misc{cisco2018,
+  author       = {Cisco},
+  howpublished = {Cisco Security Portal},
+  title        = {{What Is the Difference: Viruses, Worms, Trojans, and Bots?}},
+  year         = {2018},
+  month        = june # {~18},
+  url          = {https://tools.cisco.com/security/center/resources/virus_differences},
+}
+
 ##################################################################################################################
 # ARTICLE
 ##################################################################################################################
