--- a/acronyms.tex
+++ b/acronyms.tex
@@ -40,3 +40,4 @@
 \DeclareAcronym{mac}{short=MAC, long=Message Authentication Code}
 \DeclareAcronym{soho}{short=SOHO, long=Small Office Home Office}
 \DeclareAcronym{snmp}{short=SNMP, long=Simple Network Management Protocol}
+\DeclareAcronym{cve}{short=CVE, long=Common Vulnerabilities and Exposures}
