--- a/references.bib
+++ b/references.bib
@@ -89,6 +89,21 @@
   url          = {https://www.rfc-editor.org/rfc/rfc4253.txt}
 }
 
+@techreport{rfc1413,
+  author       = {Michael C. St. Johns},
+  title        = {{Identification Protocol}},
+  howpublished = {Internet Requests for Comments},
+  type         = {{RFC}},
+  number       = 1413,
+  pages        = {1-8},
+  year         = {1993},
+  month        = {February},
+  issn         = {2070-1721},
+  publisher    = {{RFC Editor}},
+  institution  = {{RFC Editor}},
+  url          = {https://www.rfc-editor.org/rfc/rfc1413.txt}
+}
+
 ##################################################################################################################
 # MISC
 ##################################################################################################################
