--- a/references.bib
+++ b/references.bib
@@ -254,6 +254,36 @@
   urldate      = {27 September 2021}
 }
 
+@misc{CVE-2020-11899,
+  key          = {CVE-2020-11899},
+  title        = {{CVE}-2020-11899.},
+  howpublished = {Available from MITRE, {CVE-ID} {CVE}-2020-11899.},
+  month        = july # {~17},
+  year         = {2020},
+  url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-11899},
+  urldate      = {27 September 2021}
+}
+
+@misc{CVE-2002-0013,
+  key          = {CVE-2002-0013},
+  title        = {{CVE}-2002-0013.},
+  howpublished = {Available from MITRE, {CVE-ID} {CVE}-2002-0013.},
+  month        = feb # {~13},
+  year         = {2002},
+  url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2002-0013},
+  urldate      = {27 September 2021}
+}
+
+@misc{CVE-2019-12263,
+  key          = {CVE-2019-12263},
+  title        = {{CVE}-2019-12263.},
+  howpublished = {Available from MITRE, {CVE-ID} {CVE}-2019-12263.},
+  month        = sep # {~07},
+  year         = {2020},
+  url          = {http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-12263},
+  urldate      = {27 September 2021}
+}
+
 @misc{cisco2018,
   author       = {Cisco},
   howpublished = {Cisco Security Portal},
