--- a/references.bib
+++ b/references.bib
@@ -104,6 +104,16 @@
   url          = {https://www.rfc-editor.org/rfc/rfc1413.txt}
 }
 
+@techreport{ripple20,
+  author      = {Moshe Kol and Shlomi Oberman},
+  institution = {JSOF Ltd.},
+  publisher   = {JSOF Ltd.},
+  title       = {{CVE-2020-11896 RCE CVE-2020-11898 Info Leak}},
+  year        = {2020},
+  month       = {June},
+  pages       = {1-24},
+}
+
 ##################################################################################################################
 # MISC
 ##################################################################################################################
