Add openssh diagrams

--- a/references.bib
+++ b/references.bib
@@ -111,7 +111,7 @@
   title       = {{CVE-2020-11896 RCE CVE-2020-11898 Info Leak}},
   year        = {2020},
   month       = {June},
-  pages       = {1-24},
+  pages       = {1-24}
 }
 
 ##################################################################################################################
@@ -300,12 +300,28 @@
   title        = {{What Is the Difference: Viruses, Worms, Trojans, and Bots?}},
   year         = {2018},
   month        = june # {~18},
-  url          = {https://tools.cisco.com/security/center/resources/virus_differences},
+  url          = {https://tools.cisco.com/security/center/resources/virus_differences}
 }
 
 ##################################################################################################################
 # ARTICLE
 ##################################################################################################################
+
+@article{openssh2007,
+  author     = {Venkatachalam, Girish},
+  title      = {The OpenSSH Protocol under the Hood},
+  year       = {2007},
+  issue_date = {April 2007},
+  publisher  = {Belltown Media},
+  address    = {Houston, TX},
+  volume     = {2007},
+  number     = {156},
+  issn       = {1075-3583},
+  abstract   = {What's SSH all about?},
+  journal    = {Linux J.},
+  month      = {apr},
+  pages      = {6}
+}
 
 @article{iocta2020,
   author  = {Europol},
