--- a/main.tex
+++ b/main.tex
@@ -120,6 +120,10 @@
 \cleardoublepage
 \listoftables
 
+% List of listings
+\cleardoublepage
+\lstlistoflistings
+
 \cleardoublepage
 \pagenumbering{arabic}
 
