--- a/titlepages-eng.tex
+++ b/titlepages-eng.tex
@@ -26,7 +26,7 @@
   at the\\
   Engineering Mathematics and Computing Lab\\
   under the supervision of\\
-  Herrn Prof. Dr. Vincent Heuveline
+  Prof. Dr. Vincent Heuveline
   %% additionally insert second supervisor here if carrying out an
   %% external diploma thesis. Reduce vspace in L. 44 accordingly.
 \end{center}\par
